fix constant jumps in width

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -15,7 +15,6 @@ body {
 
 main {
     background: var(--main-background);
-    width: max-content;
     border-radius: 12px;
     box-shadow: 0 10px 30px var(--shadow);
 }
