--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -12,6 +12,8 @@
 
     main {
         padding: 2rem;
+        min-width: 60%;
+        width: max-content;
         max-width: 90%;
     }
 
@@ -35,7 +37,7 @@
 
     main {
         padding: 1.5rem;
-        max-width: 100%;
+        width: 100%;
         height: 100%;
     }
 
